# Ookii.CommandLine.Cpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  test.cpp
.github/workflows/: cmake.yml
docs/: Arguments.md  CMakeLists.txt  ChangeLog.md  DefiningArguments.md  Documentation.md  LineWrappingStream.md  ParsingArguments.md  README.md  Scripts.md  ShellCommands.md  Subcommands.md  Tutorial.md  UsageHelp.md  Utilities.md  doxygen_main.md  refs.json
include/: CMakeLists.txt
include/ookii/: command_line.h  command_line_argument.h  command_line_builder.h  command_line_core.h  command_line_generated.h  command_line_parser.h  command_line_switch.h  console_helper.h  format_helper.h  line_wrapping_stream.h  linux_helper.h  localized_string_provider.h  owned_or_borrowed_ptr.h  parse_result.h  parsing_mode.h  platform_helper.h  range_helper.h  scope_helper.h  shell_command.h  shell_command_usage_options.h  string_helper.h  subcommand.h  type_info.h  usage_options.h  usage_writer.h  value_description.h  vt_helper.h  win32_helper.h
nuget/: CMakeLists.txt  New-NuGetPackage.ps1
nuget/package/: Ookii.CommandLine.Cpp.nuspec
samples/: README.md  common.h
samples/custom_usage/: CMakeLists.txt  README.md  arguments.h  custom_usage_writer.h  main.cpp
samples/generated_parser/: CMakeLists.txt  README.md  arguments.h  main.cpp
samples/generated_shell_commands/: CMakeLists.txt  main.cpp  read_command.cpp  read_command.h  write_command.h
samples/generated_subcommand/: CMakeLists.txt  README.md  global.h  main.cpp  read_command.h  write_command.cpp  write_command.h
samples/long_short/: CMakeLists.txt  README.md  arguments.h  main.cpp
samples/nested_commands/: CMakeLists.txt  README.md  base_command.h  course_commands.h  list_command.h  main.cpp  parent_command.h  student_commands.h
samples/parser/: CMakeLists.txt  README.md  main.cpp
samples/shell_command/: CMakeLists.txt  main.cpp  read_command.cpp  read_command.h  write_command.cpp  write_command.h
samples/subcommand/: CMakeLists.txt  README.md  main.cpp  read_command.cpp  read_command.h  write_command.cpp  write_command.h
scripts/: New-Parser.ps1  New-ShellCommand.ps1  New-Subcommand.ps1  build.sh  build_clang.sh  build_docs.sh  common.ps1  test.h
scripts/tests/: CMakeLists.txt  New-Parser.Tests.ps1  New-ShellCommand.Tests.ps1  New-Subcommand.Tests.ps1  Run-Test.ps1  common.ps1
scripts/tests/input/: action_arguments.h  arguments.h  arguments2.h  auto_arguments.h  expected.cpp  expected_CamelCase.cpp  expected_DashCase.cpp  expected_PascalCase.cpp  expected_SnakeCase.cpp  expected_Trim.cpp  expected_action_arguments.cpp  expected_auto_arguments.cpp  expected_headers.cpp  expected_long_short.cpp  expected_long_short_wide.cpp  expected_main.cpp  expected_wide.cpp  expected_wmain.cpp  long_short.h  sc_expected.cpp  sc_expected_CamelCase.cpp  sc_expected_DashCase.cpp  sc_expected_PascalCase.cpp  sc_expected_SnakeCase.cpp  sc_expected_Trim.cpp  sc_expected_global.cpp  sc_expected_headers.cpp  sc_expected_main.cpp  sc_expected_wide.cpp  sc_expected_wmain.cpp  shell_command.h  shell_command2.h  subcommand.h  subcommand2.h  subcommand_global.h
scripts/tests/input/expected/: parser_CamelCase.cpp  parser_DashCase.cpp  parser_PascalCase.cpp  parser_SnakeCase.cpp  parser_Trim.cpp  parser_action_arguments.cpp  parser_auto_arguments.cpp  parser_default.cpp  parser_headers.cpp  parser_long_short.cpp  parser_long_short_wide.cpp  parser_main.cpp  parser_wide.cpp  parser_wmain.cpp  sc_CamelCase.cpp  sc_DashCase.cpp  sc_PascalCase.cpp  sc_SnakeCase.cpp  sc_Trim.cpp  sc_default.cpp  sc_global.cpp  sc_headers.cpp  sc_main.cpp  sc_wide.cpp  sc_wmain.cpp
unittests/: CMakeLists.txt  CommandLineParserTests.cpp  LineWrappingStreamTests.cpp  ShellCommandTests.cpp  SubcommandTests.cpp  UobPtrTests.cpp  argument_types.h  command_types.h  common.h  console.cpp  custom_types.h  expected_usage.h  framework.h  main.cpp  resource.h  unicode.h  unittests.rc
